# py-schema-infer

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/philiprehberger_schema_infer/: __init__.py
tests/: test_schema_infer.py
