[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-schema-infer"
version = "0.3.0"
description = "Infer JSON schemas from sample data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["json", "schema", "infer", "generate", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-schema-infer#readme"
Repository = "https://github.com/philiprehberger/py-schema-infer"
Issues = "https://github.com/philiprehberger/py-schema-infer/issues"
Changelog = "https://github.com/philiprehberger/py-schema-infer/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_schema_infer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
